# encord-consensus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
encord_consensus/: app.py  launcher.py
encord_consensus/app/: 👋_Home.py
encord_consensus/app/common/: constants.py  css.py  project_selection.py  settings.py  state.py  state_hooks.py
encord_consensus/app/pages/: 1_📁_Choose Project.py  2_🔍_Inspect Files.py  3_📤_Export.py  3_🕸️_Workflows.py  4_🕸️_Workflows.py
encord_consensus/lib/: constants.py  data_export.py  data_model.py  data_transformation.py  frame_label_consensus.py  generate_charts.py  project_access.py  workflow_utils.py
