[tool.poetry]
name = "encord-consensus"
version = "0.0.14"
description = "Tool for consensus on Encord."
authors = ["Cord Technologies Limited <hello@encord.com>"]
readme = "README.md"
repository = "https://github.com/encord-team/encord-consensus"

packages = [{include = "encord_consensus"}]

license = "MIT"

[tool.poetry.scripts]
encord-consensus = "encord_consensus.launcher:launch"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
encord = "0.1.83"
streamlit = "1.23.1"
pydantic = "2.0.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '.*\/.*\.i?py(nb)?$'

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "pandera.mypy"
ignore_missing_imports = true
enable_recursive_aliases = true

[tool.pylint.'MASTER']
extension-pkg-allow-list = "cv2"

[tool.pylint.'TYPING']
generated-members = "torch.*, cv2"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "all"
enable = "C0123, C0200, C0209, E0001, E0011, E0012, E0013, E0014, E0100, E0101, E0102, E0103, E0104,E0105,E0106,E0107,E0108,E0110,E0111,E0112,E0113,E0114,E0115,E0116,E0117,E0118,E0119,E0202,E0203,E0211,E0213,E0236,E0237,E0238,E0239,E0240,E0241,E0242,E0243,E0244,E0301,E0302,E0303,E0304,E0305,E0306,E0307,E0308,E0309,E0310,E0311,E0312,E0313,E0402,E0601,E0602,E0602,E0603,E0604,E0605,E0633,E0643,E0701,E0702,E0703,E0704,E0710,E0711,E0712,E1003,E1101,E1101,E1111,E1120,E1121,E1123,E1124,E1125,E1126,E1127,E1128,E1129,E1130,E1131,E1132,E1133,E1134,E1135,E1136,E1137,E1138,E1139,E1140,E1141,E1142,E1200,E1201,E1205,E1205,E1206,E1300,E1301,E1302,E1303,E1304,E1305,E1306,E1307,E1310,E1507,E1700,E1701,E2501,E2502,E2510,E2511,E2512,E2513,E2514,E2515,E4702,E4703,W0611,W0621,W1309,W1404,W1514"
